# autoact

./: Cargo.toml  action_config.toml  sample.toml
src/: config.rs  execute.rs  main.rs  utils.rs
