[package]
name = "autoact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"]}
enigo = "0.1.3"
chrono = "0.4.35"
mouse_position = "0.1.3"

[profile.release]
lto = true
opt-level = 'z'
strip = "symbols"
